New stuff inside TM

--- a/src/app/video-player/components/pick-episode/pick-episode.component.html
+++ b/src/app/video-player/components/pick-episode/pick-episode.component.html
@@ -1,5 +1,12 @@
-<cdk-virtual-scroll-viewport [itemSize]="48" class="scroll-trick">
-  <button style="min-height: 48px;" mat-flat-button *cdkVirtualFor="let episode of data" fxLayout="row" (click)="select(episode)" >
-    <mat-icon style="margin-right: 8px;">play_circle_outline</mat-icon> <span>{{episode.title}}</span>
+<cdk-virtual-scroll-viewport [itemSize]="48" class="scroll-trick" #scrollViewport>
+  <button style="min-height: 48px;max-height: 48px;" mat-flat-button *cdkVirtualFor="let episode of data.episodes"
+    (click)="select(episode)" >
+    <div fxLayout="column">
+      <div fxLayoutAlign="start center" [class.accent]="+episode.last_seen">
+        <mat-icon style="margin-right: 8px;">{{+episode.last_seen == 0 ? 'play_circle_outline' : 'play_circle_fill'}}</mat-icon> 
+        <span fxFlex="1">{{episode.title}}</span>
+      </div>
+    </div>
+
   </button>
 </cdk-virtual-scroll-viewport>
