--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.mat-accent, .mat-fab.mat-accent {
+.mat-accent.mat-fab.mat-accent {
   background-color: #69f0ae !important;
 }
 .mat-fucking-as-i-want {
