--- a/src/app/playlist/main/main.component.html
+++ b/src/app/playlist/main/main.component.html
@@ -2,35 +2,51 @@
 <mat-toolbar class="sticky-toolbar" color="primary">
   <span>Waifu</span>
 </mat-toolbar>
-<mat-list fxLayoutGap="1em">
-  <ng-container *ngFor="let elem of (list$|async)">
-    <mat-list-item fxLayout="column" style="height: auto;margin: 1em 0">
-      <mat-card  style="height: auto;width:100%;margin-top: 1em">
-        <mat-card-header>
-          <img mat-card-avatar [src]="elem.image" alt="">
-          <mat-card-title>{{elem.title}}</mat-card-title>
-        </mat-card-header>
-        <div class="cover-image" [ngStyle]="{
-          backgroundImage: 'url('+elem.cover+')'
-        }"></div>
-        <mat-card-content>
-          <p>{{elem.description}}</p>
-        </mat-card-content>
-        <mat-card-actions fxLayoutAlign="end center">
-          <button [routerLink]="['/','watch',elem.uuid]" matTooltip="Resume" mat-icon-button><mat-icon>play_circle_outline</mat-icon></button>
-          <button [matMenuTriggerFor]="optionsMenu" [matMenuTriggerData]="{playlist:elem}" matTooltip="Options" mat-icon-button> <mat-icon>more_vert</mat-icon></button>
-        </mat-card-actions>
-      </mat-card>
-    </mat-list-item>
+  <ng-container *ngIf="(list$|async) as list;else loadingTemplate">
+    <mat-list fxLayoutGap="1em">
+  
+      <ng-container *ngFor="let elem of list">
+        <mat-list-item fxLayout="column" style="height: auto;margin: 1em 0">
+          <mat-card style="height: auto;width:100%;margin-top: 1em">
+            <mat-card-header [routerLink]="['/','watch',elem.uuid]"> 
+              <img mat-card-avatar [src]="elem.image" alt="">
+              <mat-card-title>{{elem.title}}</mat-card-title>
+              <mat-card-subtitle>{{elem.alternative_id}}</mat-card-subtitle>
+            </mat-card-header>
+            <div class="cover-image" [ngStyle]="{
+              backgroundImage: 'url('+elem.cover+')'
+            }" [routerLink]="['/','watch',elem.uuid]"></div>
+            <mat-card-content [routerLink]="['/','watch',elem.uuid]">
+              <p>{{elem.description}}</p>
+            </mat-card-content>
+            <mat-card-actions fxLayoutAlign="end center">
+              <button [routerLink]="['/','watch',elem.uuid]" matTooltip="Resume" mat-icon-button>
+                <mat-icon>play_circle_outline</mat-icon>
+              </button>
+              <button [matMenuTriggerFor]="optionsMenu" [matMenuTriggerData]="{playlist:elem}" matTooltip="Options"
+                mat-icon-button>
+                <mat-icon>more_vert</mat-icon>
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </mat-list-item>
+      </ng-container>
+    </mat-list>
   </ng-container>
-</mat-list>
+  <ng-template #loadingTemplate>
+    <div class="overlay" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1em">
+      <mat-spinner color="accent"></mat-spinner>
+      <h2>Loading playlists...</h2>
+    </div>
+  </ng-template>
+
 <div style="display: block;min-height: 8em;"></div>
 
 <mat-menu #optionsMenu="matMenu">
   <ng-template matMenuContent let-playlist="playlist">
-    <button (click)="exportPlaylist(playlist)" mat-menu-item> <mat-icon>publish</mat-icon> <span>Export playlist</span> </button>
+    <button (click)="sharePlaylist(playlist)" mat-menu-item> <mat-icon>publish</mat-icon> <span>Share</span> </button>
     <button [routerLink]="['/','home','editor',playlist.uuid]" mat-menu-item><mat-icon>edit</mat-icon><span>Edit</span></button>
-    <button (click)="deletePlaylist(playlist)" mat-menu-item color="warn" ><mat-icon>delete</mat-icon><span>Delete</span></button>
+    <button (click)="deletePlaylist(playlist)" mat-menu-item color="warn" class="mega-ultra-warn" ><mat-icon>delete</mat-icon><span>Delete</span></button>
   </ng-template>
 </mat-menu>
 
