--- a/src/app/playlist/main/main.component.scss
+++ b/src/app/playlist/main/main.component.scss
@@ -5,3 +5,19 @@
   background-size: cover;
   margin: 1em 0;
 }
+
+.overlay {
+  position: absolute;
+  top:0;
+  left: 0;
+  background-color: rgba($color: #000000, $alpha: .5);
+  width: 100vw;
+  height: 100vh;
+}
+
+.mega-ultra-warn * {
+  color: #CC3D33;
+}
+::ng-deep * {
+  outline: none;
+}
