--- a/src/app/playlist/main/main.component.html
+++ b/src/app/playlist/main/main.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar></mat-toolbar>
-<mat-toolbar class="sticky-toolbar" color="primary">
+<mat-toolbar class=" mat-elevation-z4"></mat-toolbar>
+<mat-toolbar class="sticky-toolbar mat-elevation-z4" color="primary">
   <span>Waifu</span>
 </mat-toolbar>
   <ng-container *ngIf="(list$|async) as list;else loadingTemplate">
