--- a/src/app/playlist/main/main.component.scss
+++ b/src/app/playlist/main/main.component.scss
@@ -18,6 +18,30 @@
 .mega-ultra-warn * {
   color: #CC3D33;
 }
-::ng-deep * {
-  outline: none;
+:host {
+  ::ng-deep * {
+    outline: none;
+  }
+  ::ng-deep .packed {
+    .mat-list-item-content {
+      padding: 0  !important;
+
+      .mat-card, mat-card {
+        padding: 1em 0 !important;
+        border-radius: 0 !important;
+        .mat-card-header {
+          padding: 0 1em;
+          margin-bottom: -1em;
+        }
+        .mat-card-actions {
+          margin-left: 0;
+          margin-right: 0;
+        }
+        .mat-card-content {
+          margin-bottom:  0px;
+          padding: 0 1em;
+        }
+      }
+    }
+  }
 }
